; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_api.c__scif_poll_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/mic/scif/extr_scif_api.c__scif_poll_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.scif_endpt = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.file*, i32*, i32*, %struct.scif_endpt*)* @_scif_poll_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_scif_poll_wait(%struct.file* %0, i32* %1, i32* %2, %struct.scif_endpt* %3) #0 {
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.scif_endpt*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store %struct.scif_endpt* %3, %struct.scif_endpt** %8, align 8
  %9 = load %struct.scif_endpt*, %struct.scif_endpt** %8, align 8
  %10 = getelementptr inbounds %struct.scif_endpt, %struct.scif_endpt* %9, i32 0, i32 0
  %11 = call i32 @spin_unlock(i32* %10)
  %12 = load %struct.file*, %struct.file** %5, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @poll_wait(%struct.file* %12, i32* %13, i32* %14)
  %16 = load %struct.scif_endpt*, %struct.scif_endpt** %8, align 8
  %17 = getelementptr inbounds %struct.scif_endpt, %struct.scif_endpt* %16, i32 0, i32 0
  %18 = call i32 @spin_lock(i32* %17)
  ret void
}

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @poll_wait(%struct.file*, i32*, i32*) #1

declare dso_local i32 @spin_lock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
